syntax = "proto3";

package Dog.Proto;

option java_package = "studio.first.proto.dog";
option java_outer_classname = "DogProto";

message LoginReq {
    int32 version = 1; // 1=游客登录 2=邮箱密码登录
    repeated string args = 2;
}

message LoginResp {
    int32 version = 1;
    int64 user_id = 2;
}


